# sushiTau

./: .gitignore  Dockerfile  README.md  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs
design/: design-decision.md  requirements.md
kitchen/: Cargo.toml  config.toml
kitchen/src/: main.rs
kitchen/src/api/: mod.rs
kitchen/src/db/: mod.rs
kitchen/src/repository/: mod.rs
table/: Cargo.toml
table/src/: main.rs
