[package]
name = "kitchen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
anyhow = "1.0.75"
redis = {version = "0.23.2", features = ["tokio-comp"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
uuid = { version = "1.4.1", features = ["v7", "v4", "macro-diagnostics", "serde"] }
async-trait = "0.1.73"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.10.0"